--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,59 @@
 <html>
   <head>
     <title>Mathify Careers</title>
+    <style>
+      #container{
+        max-width:720px;
+        margin:0px auto 0px auto;
+      }
+      h1{
+        color:grey;
+        text-align:center;
+        font-family:Cursive;
+        font-size:40px;
+      }
+
+      #poster{
+        width:100%;
+        height: 300px;;
+        object-fit:cover;
+
+      }
+
+      h2{
+        color: grey;
+        font-family:Roboto;
+        font-size:32px;
+        text-align:center
+      }
+
+      p{
+        font-size:20px;
+        
+      }
+    </style>
   </head>
   <body>
-  Welcome to Mathify.Here all job updates will be posted
+    <div id="container">
+    
+  <h1> Mathify Careers</h1>
+    <img id="poster" src="https://careers-mathify-website.sagnikroy5.repl.co/static/poster.jpg" height="200px"  width ="400px">
+
+    <h2>About Mathify</h2>
+  <p>
+
+Mathify is a cutting-edge educational platform revolutionizing the way students engage with mathematics. Dedicated to helping students excel in their mathematical journey, Mathify provides a dynamic and intuitive learning environment that caters to individual needs. With a vast array of interactive resources and personalized tutoring, Mathify empowers students to tackle complex concepts, solve problems, and build a solid foundation in math. From elementary school to advanced calculus, the platform offers comprehensive lessons, real-time feedback, and adaptive exercises, ensuring a tailored learning experience for every student. Through Mathify, students unlock their full potential, gaining confidence and mastery in mathematics, and paving the way for a successful academic future.
+  </p>
+
+    <h2>Job Open Positions Hiring !!</h2>
+    <p>Show the jobs here</p>
+    <div style="text-align:center;">
+    <button > Contact Us</button> 
+      <footer style="font-size:18px; margin-top:8px">
+        Copyright 2023 Mathify
+      </footer>
+    </div>
+    </div>
   </body>
+  
 </html>
