--- a/templates/home.html
+++ b/templates/home.html
@@ -1,56 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mathify Careers</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
     <style>
-      #container{
-        max-width:720px;
-        margin:0px auto 0px auto;
-      }
-      h1{
-        color:grey;
-        text-align:center;
-        font-family:Cursive;
-        font-size:40px;
-      }
-
       #poster{
-        width:100%;
-        height: 300px;;
+        height: 360px;
         object-fit:cover;
-
-      }
-
-      h2{
-        color: grey;
-        font-family:Roboto;
-        font-size:32px;
-        text-align:center
-      }
-
-      p{
-        font-size:20px;
-        
+        width:100%;
       }
     </style>
   </head>
   <body>
-    <div id="container">
+    <div class="container">
     
-  <h1> Mathify Careers</h1>
-    <img id="poster" src="https://careers-mathify-website.sagnikroy5.repl.co/static/poster.jpg" height="200px"  width ="400px">
+  <h1 class="text-center mt-1 mb-4 fst-italic"> {{company_name}} Careers</h1>
+    <img id="poster" class="img-fluid" src="https://careers-mathify-website.sagnikroy5.repl.co/static/poster.jpg" >
 
-    <h2>About Mathify</h2>
-  <p>
+    <h2 class="text-center mt-4 ">About Mathify</h2>
+  <p class="lead">
 
 Mathify is a cutting-edge educational platform revolutionizing the way students engage with mathematics. Dedicated to helping students excel in their mathematical journey, Mathify provides a dynamic and intuitive learning environment that caters to individual needs. With a vast array of interactive resources and personalized tutoring, Mathify empowers students to tackle complex concepts, solve problems, and build a solid foundation in math. From elementary school to advanced calculus, the platform offers comprehensive lessons, real-time feedback, and adaptive exercises, ensuring a tailored learning experience for every student. Through Mathify, students unlock their full potential, gaining confidence and mastery in mathematics, and paving the way for a successful academic future.
   </p>
 
-    <h2>Job Open Positions Hiring !!</h2>
-    <p>Show the jobs here</p>
-    <div style="text-align:center;">
-    <button > Contact Us</button> 
-      <footer style="font-size:18px; margin-top:8px">
+    <h2 class="text-center  mb-4">Job Open Positions Hiring !!</h2>
+    <div>
+      {% for job in jobs %}
+          {% include 'job.html' %}
+      {% endfor %}
+    </div>
+    <div class="text-center">
+    <button class="btn btn-primary btn-lg"> Contact Us</button> 
+      <footer class="mt-4 lead mb-2" >
         Copyright 2023 Mathify
       </footer>
     </div>
