--- a/templates/job.html
+++ b/templates/job.html
@@ -11,6 +11,6 @@
       </div>
 </div>
   <div class="col-3">
-<button type="button" class="btn btn-outline-info">Apply</button>
+<a href="mailto:sagnikrc02@gmail.com?subject= Application for {{job['title']}}" type="button" class="btn btn-outline-info">Apply</a>
   </div>
  </div>
